# mobilityduck

./: .gitignore  CMakeLists.txt  Makefile  README.md  benchmark_current_performance.cpp  extension_config.cmake  vcpkg.json
.github/workflows/: MainDistributionPipeline.yml
_meos/: meos_internal.c  meos_internal.h  type_util.h
benchmark/: benchmark_binary.py  benchmark_results.json  benchmark_str_wkb.py
benchmark/BerlinMOD/: .gitignore  README.md  load_data.py  run_queries.py
benchmark/BerlinMOD/results/output/: query_1.csv  query_13.csv
benchmark/BerlinMOD/results/output/brussels/: query_1.csv  query_14.csv  query_16.csv  query_2.csv  query_3.csv  query_5.csv  query_6.csv  query_8.csv  query_9.csv
benchmark/BerlinMOD/results/output/hanoi/: query_1.csv  query_13.csv  query_16.csv  query_2.csv  query_3.csv  query_5.csv  query_6.csv  query_8.csv  query_9.csv
benchmark/BerlinMOD/results/output/hanoi/explain/: query_1.txt  query_10.txt  query_11.txt  query_12.txt  query_13.txt  query_14.txt  query_15.txt  query_16.txt  query_17.txt  query_2.txt  query_3.txt  query_4.txt  query_5.txt  query_6.txt  query_7.txt  query_8.txt  query_9.txt
benchmark/BerlinMOD/results/output/hanoi_0.001/explain/: query_1.txt  query_10.txt  query_11.txt  (+14 more)
benchmark/BerlinMOD/results/stats/: load_data.json  run_queries.json
benchmark/BerlinMOD/results/stats/brussels/: load_data.json  run_queries.json
benchmark/BerlinMOD/results/stats/hanoi/: load_data.json  run_explain.json  run_queries.json
benchmark/BerlinMOD/results/stats/hanoi_0.001/: load_data.json  run_explain.json
benchmark/BerlinMOD/results/stats/hanoi_0.002/: load_data.json  run_explain.json
benchmark/BerlinMOD/results/stats/hanoi_0.005/: load_data.json  run_explain.json
benchmark/BerlinMOD/results/stats/hanoi_0.01/: load_data.json  run_explain.json
benchmark/BerlinMOD/results/stats/hanoi_0.02/: load_data.json
benchmark/BerlinMOD/sql/explain/: query_1.sql  query_10.sql  query_11.sql  query_12.sql  query_13.sql  query_14.sql  query_15.sql  query_16.sql  query_17.sql  query_2.sql  query_3.sql  query_4.sql  query_5.sql  query_6.sql  query_7.sql  query_8.sql  query_9.sql
benchmark/BerlinMOD/sql/load/: 00_cleanup.sql  01_instants.sql  02_periods.sql  03_points.sql  04_regions.sql  05_vehicles.sql  06_licences.sql  07_trips.sql
benchmark/BerlinMOD/sql/queries/: query_1.sql  query_10.sql  query_11.sql  query_12.sql  query_13.sql  query_14.sql  query_15.sql  query_16.sql  query_17.sql  query_2.sql  query_3.sql  query_4.sql  query_5.sql  query_6.sql  query_7.sql  query_8.sql  query_9.sql
benchmark/old/: BENCHMARK_README.md  Makefile.benchmark  benchmark_results.json  benchmark_sql.sql  benchmark_sql_runner.py  benchmark_temporal_types.cpp  debug_persistent.db  debug_persistent.py  sql_benchmark_results.json
docs/: MEOS-DuckDB Type Conversion.md  Register file and Scalar function.md
examples/: BerlinMOD.ipynb  requirements.txt
examples/BerlinMOD/: .gitignore  BerlinMOD.ipynb  requirements.txt
examples/BerlinMOD/data/: municipalities.csv
src/: functions.cpp  geo.cpp  geoSet.cpp  geomset.cpp  geoset.cpp  intset.cpp  mobilityduck_extension.cpp  set.cpp  set2.cpp  span.cpp  spanset.cpp  tgeometry.cpp  tgeompoint.cpp  types.cpp
src/_meos/: meos_catalog.c
src/geo/: geoset.cpp  stbox.cpp  stbox_functions.cpp  tgeometry.cpp  tgeometry_in_out.cpp  tgeompoint.cpp  tgeompoint_functions.cpp
src/include/: common.hpp  functions.hpp  geo.hpp  geoSet.hpp  geomset.hpp  geoset.hpp  intset.hpp  meos_wrapper_simple.hpp  mobilityduck_extension.hpp  properties.hpp  set.hpp  set2.hpp  span.hpp  spanset.hpp  tgeometry.hpp  tgeompoint.hpp  time_util.hpp  tydef.hpp  type_util.hpp  types.hpp
src/include/geo/: geoset.hpp  stbox.hpp  stbox_functions.hpp  tgeometry.hpp  tgeompoint.hpp  tgeompoint_functions.hpp
src/include/index/: rtree_index_create_physical.hpp  rtree_index_scan.hpp  rtree_module.hpp
src/include/temporal/: set.hpp  span.hpp  tbool.hpp  tbox.hpp  tbox_functions.hpp  temporal.hpp  temporal_functions.hpp  temporal_types.hpp  tint.hpp  tint2.hpp  tint3.hpp
src/index/: rtree_index_create_physical.cpp  rtree_index_scan.cpp  rtree_module.cpp  rtree_optimize_scan copy.cpp  rtree_optimize_scan.cpp  rtree_pragmas.cpp
src/meos/: CMakeLists.txt  meos.c  meos.h  meos_catalog.h  type_util.c
src/meos/examples/: str_wkb  str_wkb.c  tint_creation  tint_creation.c  tint_make  tint_make.c  tpoint_assemble  tpoint_assemble.c
src/meos/include/: meos.h  meos_geo.h  meos_internal.h  meos_rgeo.h  postgres_ext_defs.in.h
src/meos/include/geo/: tgeo_tile.h
src/meos/include/rgeo/: trgeo_seqset.h
src/meos/include/temporal/: postgres_types.h  span.h  temporal.h  temporal_tile.h  temporal_waggfuncs.h  tsequenceset.h
src/meos/postgres/utils/: date.h  datetime.h  formatting.c  formatting.h  timestamp.c  timestamp.h  timestamp_def.h
src/meos/src/geo/: stbox.c  tgeo_tile.c  tspatial_srid.c
src/meos/src/rgeo/: trgeo.c  trgeo_seqset.c
src/meos/src/temporal/: meos_catalog.c  postgres_types.c  set.c  span.c  span_tile_meos.c  spanset.c  tbox.c  temporal.c  temporal_aggfuncs.c  temporal_aggfuncs_meos.c  temporal_analytics.c  temporal_modif.c  temporal_tile.c  temporal_tile_meos.c  temporal_waggfuncs.c  tinstant.c  tsequence.c  tsequenceset.c
src/postgis/: postgis_config.h
src/postgis/liblwgeom/: liblwgeom.h  liblwgeom.h.in  lwgeom_geos.h
src/temporal/: set.cpp  span.cpp  spanset.cpp  tbool.cpp  tbox.cpp  tbox_functions.cpp  temporal.cpp  temporal_functions.cpp  temporal_types.cpp  tint.cpp  tint2.cpp  tint3.cpp
src/tgeo/: tgeometry.cpp  tgeometry_in_out.cpp  tgeompoint.cpp
test/: test_geomset.sql  test_set.sql  test_span.sql  test_tgeometry.sql  test_tinstant.sql  test_tint.sql
test/sql/: geoset.test  mobilityduck.test  point.test_  set.test  set.test_  span.test  span.test_  spanset.test  stbox.test  tbool.test  tbool.test_  tbox.test  temporal.test  tgeometry.test  tgeompoint.test  tint.test  tint.test_  tint2.test  tint3.test
tools/: generator.env  generator.py
vcpkg_ports/meos/: portfile.cmake  vcpkg.json
(+60 files in other folders)
